Modernize java